[package]
name = "frost377"
version = "0.1.0"
edition = "2021"
authors = ["Penumbra <crates@penumbra.zone>"]
description = "An instantiation of FROST threshold signing for use with decaf377."
license = "MIT OR Apache-2.0"

[dependencies]
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
rand = { version = "0.8.4" }
ark-ff = "0.3"
blake2b_simd = "0.5"
anyhow = "1"

